# stackoverflow-xml-api

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  test.py
resources/: so_xml_analyser.py
tests/: test_api.py  test_so_xml_analyser.py
