[project]
name = "xml_api"
version = "0.1.0"
description = "An API to analyse the content of large XML files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-restful>=0.3.10",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20241016",
]

[tool.mypy]
ignore_missing_imports = true